# autopie

./: .gitignore  INSTALL.md  README.md  pyproject.toml
src/autopie/: __main__.py  config.toml.template  core.py  currency.py  history.py  main.py  secrets.env.template  storage.py  util.py
src/autopie/data/: history.csv
src/autopie/providers/: kraken.py  offline.py  physical.py  xtb_treasury.py
